# iced_baseview

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
examples/: counter.rs  custom_styles.rs  hello_world.rs  open_window.rs  slider.rs  text_input.rs  window_subs.rs
examples/integration_wgpu/: Cargo.toml  README.md
examples/integration_wgpu/src/: controls.rs  main.rs  scene.rs
src/: application.rs  clipboard.rs  conversion.rs  element.rs  error.rs  executor.rs  handle.rs  handler.rs  keyboard.rs  lib.rs  mouse.rs  program.rs  proxy.rs  runner.rs  settings.rs  system.rs  time.rs  widget.rs  window.rs  wrapper.rs
src/application/: profiler.rs  state.rs
src/program/: state.rs
src/settings/: not_windows.rs  windows.rs
src/window/: settings.rs
