[package]
name = "iced_baseview"
version = "0.0.3"
authors = [
  "Billy Messenger <BillyDM@protonmail.com>",
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Joakim Frostegård <joakim.frostegard@gmail.com>",
]
edition = "2021"
description = "A baseview runtime for Iced"
license = "MIT"
repository = "https://github.com/BillyDM/iced_baseview"
documentation = "https://docs.rs/iced_baseview"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
# Enables a debug view in native platforms (press F12)
debug = ["iced_runtime/debug"]
# Enable the wgu renderer
wgpu = ["iced_renderer/wgpu"]

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "1d9806d" }
cfg-if = "1"
copypasta = "0.8"
iced_runtime = "0.1"
iced_renderer = "0.1"
iced_graphics = "0.9"
iced_style = "0.9"
iced_widget = "0.1"
keyboard-types = { version = "0.6", default-features = false }
log = "0.4"
raw-window-handle = "0.4"
rwh05 = { package = "raw-window-handle", version = "0.5" }
thiserror = "1.0"
