[package]
name = "iced-baseview-wgpu-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
env_logger = "0.8"
futures = "0.3.5"
iced_baseview = { path = "../../" }
iced_core = "0.4"
iced_futures = "0.3"
iced_graphics = "0.2"
iced_native =  "0.4"
iced_wgpu = { version = "0.4" }
keyboard-types = { version = "0.5", default-features = false }
